--- a/index.html
+++ b/index.html
@@ -307,6 +307,52 @@
 			
 		</div>
 	</div>
+	<div class="contacts">
+		<div class="container">
+			<div class="d-flex">
+				<div class="data">
+					<div class="title">НАШІ
+						<span>КОНТАКТИ</span>
+					</div>
+					<div class="adress">Адреса
+						<span>вул. Раневицька, 5а, Дрогобич,
+						Львівська область, 82100</span>
+					</div>
+					<div class="phone">Контактний телефон
+						<span>+38 067 300 5006</span>
+					</div>
+					<div class="social">Ми в соц. мережах</div>
+					<div class="social_icons">
+						<img src="img/instagram.png">
+						<img src="img/facebook.png">
+					</div>
+				</div>
+				<div class="aplication">
+					<div class="aplication_box">
+						<div class="aplication_form">
+							<div class="form_title">Залиш заявку до 
+								<span>15 липня</span><br>
+								та отримай <span>знижку 10%</span> на весь курс
+							</div>
+							<form action="">
+							<div class="name"> 
+								<input type="text" placeholder="Ваше ім'я" name="name">
+							</div>
+							<div class="phone"> 
+								<input type="tel" placeholder="Номер телефону" name="phone">
+							</div>
+							<div class="email">
+								<input type="email" placeholder="Email" name="email">
+							</div>
+							<button>Записатись на курс</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </main>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
