--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 			<div class="logo">
 				#hard_code
 			</div>
+			<div class="header__menu-toggle">
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+
 			<div class="menu">
 				<ul>
 					<li><a href="#">Про курс</a></li>
@@ -39,6 +45,15 @@
 		
 		<div class="first_section"> 
 			<div class="container">
+			<div class="slide-menu">
+				<ul>
+					<li><a href="#">Про курс</a></li>
+					<li><a href="#">Для кого курс</a></li>
+					<li><a href="#">Відгуки</a></li>
+					<li><a href="#">Контакти</a></li>
+					<li><button>Записатись на курс</button></li>
+				</ul>
+			</div>
 				<div class="title">
 					<div class="text">
 						<span class="first">курс</span>
